--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://ryan-f3107.github.io/RoboFriends/",
+  "homepage": "https://Ryan-F3107.github.io/RoboFriends/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
